<resources>
    <string name="app_name">Wovie</string>
    <string name="now_playing">Now Playing</string>
    <string name="trending">Trending</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="some_error_occured">Some Error Occurred</string>
    <string name="retry">Retry</string>
    <string name="genres">Genres</string>
    <string name="overview">Overview</string>
    <string name="bookmark_this">Bookmark this</string>
    <string name="voters">Voters:</string>
    <string name="rating">Rating:</string>
    <string name="actor">Actor</string>
    <string name="dash">-</string>
    <string name="biography">Biography</string>
    <string name="search">Search</string>
    <string name="no_search_results_ntry_another">No search results\nTry another</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="delete_all">Delete All</string>
    <string name="no_bookmarks_found_nplease_bookmark">No bookmarks found\nplease Bookmark</string>
    <string name="actors_title">Actors</string>
    <string name="recommended_title">Recommended</string>
</resources>